--- a/views/pages/viewPayment.ejs
+++ b/views/pages/viewPayment.ejs
@@ -13009,102 +13009,85 @@
             </div>
 
 
-            <% rows.forEach(function(r) { %>
                 <!-- Main content section, will be different for all the pages -->
                 <div class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main" style="min-width: 1000px;">
                     <h1 class="display-1">New Payment</h1>
 
                     <div class="formcontainer">
                         <form action="/newPayment/Added" method="post">
-                            <!-- <form action="/newPayment/Added" target="_blank" method="post"> -->
-                            <div class="row g-3 gx-5">
+                            <% rows.forEach(function(r) { %>
                                 <div class="row g-3 gx-5">
-                                    <div class="col-md-12">
+                                    <div class="col-md-6">
                                         <h2>Payment Information</h2>
-                                        <label class="form-label">Payment ID</label>
-                                        <input type="text" class="form-control" id="inputClientName" name="paymentID"
-                                            value="<%=r.paymentID%>">
+                                        <label for="inputInvoiceID" class="form-label">Invoice ID</label>
+                                        <input type="text" class="form-control" id="inputInvoiceID" name="invoiceid"
+                                        value="<%= r.invoiceid %> , <%= r.clientname %>" readonly="readonly">
+                                        <!-- <select class="form-control" id="inputInvoiceID" name="invoiceid">
+                                            <option hidden disabled selected value> Choose an Invoice </option>
+                                            <% rows.forEach(function(r) { %>
+                                            <option value="<%= r.invoiceid %>">
+                                                Invoice <%= r.invoiceid %> , <%= r.clientname %>
+                                            </option>
+                                            <% }) %>
+                                        </select> -->
                                         <br>
-
-                                        <label class="form-label">Payment Status</label>
-                                        <input type="text" class="form-control" id="inputClientName"
-                                            name="paymentStatus" value="<%=r.paymentStatus%>">
+                                        <label for="inputpaymentID" class="form-label">Payment ID</label>
+                                        <input type="text" class="form-control" id="inputpaymentID" name="inPID"
+                                        value="<%= r.paymentid %>" readonly="readonly">
                                         <br>
-
-                                        <label class="form-label">Payment Date</label>
-                                        <input type="text" class="form-control" id="inputClientName" name="paymentDate"
-                                            value="<%=r.paymentDate%>">
+                                        <label for="inputpaymentStatus" class="form-label">Payment Status</label>
+                                        <input type="text" class="form-control" id="inputpaymentStatus" name="inPayStatus"
+                                        value="<%= r.paymentstatus %>" readonly="readonly">
+                                        <!-- <select class="form-control" id="inputpaymentStatus" name="inPayStatus">
+                                            <option hidden disabled selected value> Choose status of payment </option>
+                                            <option value="COMPLETED"> Completed </option>
+                                            <option value="REFUNDED"> Refunded </option>
+                                            <option value="DRAFT"> Draft </option>
+                                        </select> -->
+        
                                         <br>
-
-                                        <label for="inputClientName" class="form-label">Client Name</label>
-                                        <input type="text" class="form-control" id="inputClientName" name="clientName">
-                                        <br>
-
-                                        <!-- 
-                                            <select class="form-control" id="inputClientName" name="prdctID">
-                                                <option></option>
-                                            </select>
-                                            -->
-
-
-                                        <label for="inputInvoiceNumber" class="form-label">Invoice ID</label>
-                                        <input type="text" class="form-control" id="inputPaymentName" name="invoiceID"
-                                            value="<%=r.invoiceID%>">
-                                        <br>
-
-                                        <label for="inputPrice" class="form-label">Price</label>
-                                        <input type="number" class="form-control" id="inputPrice" name="prdctPrice"
-                                            min=0 value=0 step=0.01 placeholder=0.00>
-                                        <br>
-
-                                        <label for="inputInvoiceNumber" class="form-label">Amount</label>
-                                        <input type="text" class="form-control" id="inputPaymentName" name="amnt"
-                                            value="<%=r.amount%>">
-                                        <br>
-
-                                        <label for="inputInvoiceNumber" class="form-label">Method</label>
-                                        <input type="text" class="form-control" id="inputPaymentName"
-                                            name="paymentMethod" value="<%=r.method%>">
-                                        <br>
+                                        <label for="inputPaymentDate" class="form-label">Payment Date</label>
+                                        <input type="text" class="form-control" id="inputPaymentDate" name="inPayDate"
+                                        value="<%= r.paymentdate %>" readonly="readonly">
                                     </div>
-                                </div>
-
-                                <div class="row g-3 gx-5">
-                                    <div class="col-md-12">
+        
+                                    <div class="col-md-6">
                                         <h2>Billing Information</h2>
-                                        <label for="inputModelSeries" class="form-label">Model Series</label>
-                                        <input type="text" class="form-control" id="inputModelSeries" name="prdctModel">
+                                        <label for="inputAmount" class="form-label">Amount</label>
+                                        <input type="number" class="form-control" id="inputAmount" name="inAmnt"
+                                        value="<%= r.amount %>" readonly="readonly">
                                         <br>
-                                        <label id="inputCategory" class="form-label">Category</label>
-                                        <input type="text" class="form-control" id="inputCategory" name="prdctCategory">
+                                        <label for="inputMethod" class="form-label">Method</label>
+                                        <input type="text" class="form-control" id="inputMethod" name="inMethod"
+                                        value="<%= r.method %>" readonly="readonly">
                                     </div>
-                                </div>
-
-                                <div class="row g-3 gx-5">
-                                    <div class="col-md-12">
-                                        <label for="inputNotes" class="form-label">Additional Notes</label>
-                                        <input type="textarea" class="form-control" id="inputNotes" name="paymentNotes"
-                                            classname="Text1" cols="40" rows="5" value="<%=r.notes%>">
-                                        <br>
+        
+                                    <div class="row g-3 gx-5">
+                                        <div class="col-md-12">
+                                            <label for="inputNotes" class="form-label">Additional Notes</label>
+                                            <input type="textarea" class="form-control" id="inputNotes" name="inNotes" classname="Text1" 
+                                            cols="40" rows="5" value="<%= r.notes %>" readonly="readonly">
+                                            <br>
+                                        </div>
                                     </div>
+        
+                                    <!-- <form method="POST" action="/newClient/Added"> -->
+                                    <div class="col-12" style="text-align: center;">
+                                        <a href="/paymentspage" class="btn btn-secondary">Return</a>
+                                        
+                                        <a href="/editPayment/<%=r.paymentid%>" class="btn btn-secondary">Edit Payment</a>
+                                        
+                                        <form method="POST" action='/deletepayment/<%=r.paymentid%>'>
+                                            <input type="submit" value="Delete Payment" class="btn btn-secondary"></input>
+                                        </form>
+                                    </div>
+                                    <!-- </form> -->
+        
                                 </div>
-
-                                <div class="col-12" style="text-align: center;">
-                                    <button id="addPayment" type="submit" class="btn btn-secondary">Add Payment</button>
-                                    <a class="btn btn-secondary" href="/paymentspage">return to payment page</a>
-                                </div>
-                            </div>
+                            <% }); %>
                         </form>
                     </div>
                 </div>
-                <% }); %>
         </div>
     </div>
-
-    <!-- <script>
-        //set values in selection box
-        function addOption(parentID, optionValue) {
-            // add options
-        }
-    </script> -->
 </body>
