--- a/views/pages/viewPayment.ejs
+++ b/views/pages/viewPayment.ejs
@@ -13055,7 +13055,7 @@
                                         <h2>Billing Information</h2>
                                         <label for="inputAmount" class="form-label">Amount</label>
                                         <input type="number" class="form-control" id="inputAmount" name="inAmnt"
-                                        value="<%= r.amount %>" readonly="readonly">
+                                        readonly="readonly" value=<%= r.amount %> >
                                         <br>
                                         <label for="inputMethod" class="form-label">Method</label>
                                         <input type="text" class="form-control" id="inputMethod" name="inMethod"
