--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -226,7 +226,8 @@
                             <div class="col-md-6">
                                 <h2>Billing Information</h2>
                                 <label for="inputAmount" class="form-label">Amount</label>
-                                <input type="number" class="form-control" id="inputAmount" name="inAmnt">
+                                <input type="number" class="form-control" id="inputAmount" name="inAmnt" min=0
+                                value=0 step=0.01 placeholder=0.00>
                                 <br>
                                 <label for="inputMethod" class="form-label">Method</label>
                                 <input type="text" class="form-control" id="inputMethod" name="inMethod" placeholder="VISA">
