made paymentid readonly

--- a/views/pages/editPayment.ejs
+++ b/views/pages/editPayment.ejs
@@ -200,7 +200,8 @@
                                     
                                     <br>
                                     <label for="inputpaymentID" class="form-label">Payment ID</label>
-                                    <input type="text" class="form-control" id="inputpaymentID" name="inPID" value="<%= r.paymentid %>">
+                                    <input type="text" class="form-control" id="inputpaymentID" name="inPID" 
+                                    value="<%= r.paymentid %>" readonly="readonly">
                                     
                                     <br>
                                     <label for="inputpaymentStatus" class="form-label">Payment Status</label>
