--- a/views/pages/editPayment.ejs
+++ b/views/pages/editPayment.ejs
@@ -181,8 +181,9 @@
                 <h1 class="display-1">Edit Payment</h1>
 
                 <div class="formcontainer">
-                    <form action="/updatePayment/:paymentid" method="post">
-                        <% rows.forEach(function(r) { %>
+                    <% rows.forEach(function(r) { %>
+                        <form action="/updatePayment/<%=r.paymentid%>" method="post">
+                        <!-- <% rows.forEach(function(r) { %> -->
                             <div class="row g-3 gx-5">
                                 <div class="col-md-6">
                                     <h2>Payment Information</h2>
@@ -269,9 +270,9 @@
                                 <div class="col-12" style="text-align: center;">
                                     <a href="/paymentspage" class="btn btn-secondary">Return</a>
                                             
-                                    <form method="POST" action="/updatePayment/<%=r.paymentid%>">
+                                    <!-- <form method="POST" action="/updatePayment/<%=r.paymentid%>"> -->
                                         <input type="submit" value="Update Info" class="btn btn-secondary"></input>
-                                    </form>
+                                    <!-- </form> -->
                                     
                                     <form method="POST" action='/deletepayment/<%=r.paymentid%>'>
                                         <input type="submit" value="Delete Payment" class="btn btn-secondary"></input>
@@ -279,8 +280,9 @@
                                 </div>
 
                             </div>
-                        <% }); %>
-                    </form>
+                        <!-- <% }); %> -->
+                        </form>
+                    <% }); %>
                 </div>
             </div>
         </div>
