--- a/views/pages/editProductInfo.ejs
+++ b/views/pages/editProductInfo.ejs
@@ -13028,11 +13028,7 @@
                                     <h2>Product Information</h2>
                                     <label for="inputProductID" class="form-label">Product ID</label>
                                     <input type="text" class="form-control" id="inputProductID" name="prdctID"
-                                        value="<%= r.productid %>">
-                                    <!-- <br>
-                                    <label for="inputmodelseries" class="form-label">Model Series</label>
-                                    <input type="text" class="form-control" id="inputmodelseries" name="prdctModel"
-                                    value="<%=r.modelseries%>"> -->
+                                        value="<%= r.productid %>" readonly="readonly">
                                     <br>
                                     <label for="inputProductName" class="form-label">Product Name</label>
                                     <input type="text" class="form-control" id="inputProductName" name="prdctName"
@@ -13070,8 +13066,7 @@
                                     <!-- <form method="POST" action="/newProduct/Added"> -->
 
                                     <!-- Sus EJS code changed it back to my logic (Nick)-->
-                                    <form class="form-inline" action="/updateProductInfo/<%=r.productid%>"
-                                        method="POST">
+                                    <form class="form-inline" action="/updateProductInfo/<%=r.productid%>" method="POST">
                                         <input class="btn btn-secondary" type="submit" value="Update">
                                     </form>
 
