--- a/views/pages/editProductInfo.ejs
+++ b/views/pages/editProductInfo.ejs
@@ -13066,9 +13066,9 @@
                                     <!-- <form method="POST" action="/newProduct/Added"> -->
 
                                     <!-- Sus EJS code changed it back to my logic (Nick)-->
-                                    <form class="form-inline" action="/updateProductInfo/<%=r.productid%>" method="POST">
+                                    <!-- <form class="form-inline" action="/updateProductInfo/<%=r.productid%>" method="POST"> -->
                                         <input class="btn btn-secondary" type="submit" value="Update">
-                                    </form>
+                                    <!-- </form> -->
 
                                     <form class="form-inline" action="/deleteProductInfo/<%=r.productid%>"
                                         method="POST">
