--- a/views/pages/editProductInfo.ejs
+++ b/views/pages/editProductInfo.ejs
@@ -232,17 +232,7 @@
 
                                 <!-- <form method="POST" action="/newProduct/Added"> -->
                                 <div class="col-12" style="text-align: center;">
-                                    <!-- <form method="POST" action="/newProduct/Added"> -->
-
-                                    <!-- Sus EJS code changed it back to my logic (Nick)-->
-                                    <!-- <form class="form-inline" action="/updateProductInfo/<%=r.productid%>" method="POST"> -->
-                                        <input class="btn btn-secondary" type="submit" value="Update">
-                                    <!-- </form> -->
-
-                                    <form class="form-inline" action="/deleteProductInfo/<%= r.productid %>"
-                                        method="POST">
-                                        <input class="btn btn-secondary" type="submit" value="Delete">
-                                    </form>
+                                    <!-- <form method="POST" action="/newProduct/Added"> -                               
 
                                     <a class="btn btn-secondary" href="/productspage">Return</a>
                                     <!-- </form> -->
